<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:padding="4dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_20">

            <ImageButton
                android:id="@+id/image_item"
                android:layout_width="@dimen/spacing_xmlarge"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/bg_round_image"
                android:contentDescription="@string/image"
                android:padding="1dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout1"
                app:srcCompat="@drawable/ic_triangle_up"
                app:tint="@color/md_error_color" />

            <TextView
                android:id="@+id/tv_plate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_bold"
                android:letterSpacing="0.05"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/md_black_1000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="KAT 527S" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"

                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintStart_toEndOf="@+id/image_item"
                app:layout_constraintTop_toBottomOf="@id/tv_plate">

                <TextView
                    android:id="@+id/tv_amount_status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/payment_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_amount_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:letterSpacing="0.05"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/Rejected"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="pending" />

                <TextView
                    android:id="@+id/tv_amount_due_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/amount_due"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_amount_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:letterSpacing="0.05"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/Rejected"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="300" />

                <TextView
                    android:id="@+id/tv_amount_paid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/amount_paid"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_amount_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:letterSpacing="0.05"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/Approved"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="300" />

                <TextView
                    android:id="@+id/tv_balance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:letterSpacing="0.05"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/Rejected"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="300" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout1"
                app:layout_constraintTop_toTopOf="@+id/linearLayout1">


                <TextView
                    android:id="@+id/tv_time_in_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/time_in"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_time_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/md_grey_700"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Time: 4:50pm Thursday" />

                <TextView
                    android:id="@+id/tv_time_paid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:layout_marginTop="12dp"
                    android:text="@string/time_paid"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_time_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/md_grey_700"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Time: 4:50pm Thursday" />

                <TextView
                    android:id="@+id/tv_time_out_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/time_out"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_time_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/md_grey_700"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Time: 4:50pm Thursday" />

                <TextView
                    android:id="@+id/tv_time_spent_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:letterSpacing="0.05"
                    android:text="@string/time_spent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/md_black_1000"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_time_spent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="___"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/md_grey_700"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Time: 4:50pm Thursday" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>